# trishift

./: .gitignore  README.md  REPRODUCIBILITY.md  REPRODUCIBILITY_QUICK.md  _tmp_gears_pertdata_snip.txt  environment_baselines.yml  pyproject.toml  pytest.ini
configs/: defaults.yaml  paths.yaml
docs/: codex_app_official_zh.md  common_server_commands_cn.md  downstream_experiment_plan_cn.md  eval_metrics_guide_cn.md  server_training_guide_cn.md  systema_ref_compare_adamson_20260218_122654.md  trishift_repo_audit_20260225_150408.md
notebooks/: Fig1_MethodOverview.ipynb  Fig2_MultiDatasetBenchmark.ipynb  Fig2_e_trishift.ipynb  Fig3_ReferenceConditioning.ipynb  Fig4_NormanGeneralization.ipynb  Fig5_BiologyAndAblation.ipynb  Fig5_DistributionRecovery.ipynb  FigS1_BenchmarkExtension.ipynb  FigS2_AdditionalCases.ipynb  FigS3_BiologyAndAblation.ipynb  FigS3_CentroidAnalysis.ipynb  FigS4_CentroidAnalysis.ipynb  FigS4_Robustness.ipynb  FigS5_Robustness.ipynb  FigS6_Stage1LatentClustering.ipynb  FigS7_Stage1LatentClustering.ipynb  baseline_panel_downstream_experiment.ipynb  case_expression_compare_fig2d_style.ipynb  condition_centroid_visualization.ipynb  deg20_downstream_experiment.ipynb  loss_curves.ipynb  norman_gi_precision_experiment.ipynb  norman_gi_truth_definition.ipynb  norman_nonadd_downstream_experiment.ipynb  norman_nonadd_gears_style_experiment.ipynb  norman_subgroup_compare_fig2fg_style.ipynb  pathway_recovery_downstream_experiment.ipynb  stage1_latent_clustering.ipynb  stratified_robustness_downstream_experiment.ipynb  tutorial_custom_dataset.ipynb  (+2 more)
(+311 files in other folders)
