[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trishift"
version = "0.1.0"
description = "TriShift single-cell perturbation modeling and evaluation toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "TriShift contributors"},
]
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "anndata",
  "scanpy",
  "scvi-tools",
  "scipy",
  "pyyaml",
  "tqdm",
]

[project.urls]
Repository = "https://github.com/elan6666/trishift"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
